fix: use lower z-index so it doesnt overlap modal

--- a/dashboard/app/assets/stylesheets/application.scss
+++ b/dashboard/app/assets/stylesheets/application.scss
@@ -1471,7 +1471,7 @@ html[dir=rtl] .qtip-content {
 }
 
 .cdo-qtips {
-  z-index: 2000 !important;
+  z-index: 1030 !important;
 }
 
 .tooltip-x-close.qtip-icon {
